--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           <nav>
             <ul class="header__navigation">
               <li>
-                <a class="link link__header link__header--active" href="index.html"
+                <a
+                  class="link link__header link__header--active"
+                  href="index.html"
                   >Agencja</a
                 >
               </li>
@@ -42,18 +44,14 @@
         </div>
         <ul class="header__contact-info">
           <li>
-            <a
-              class="link link__contact-info"
-              href="mailto:info@devstudio.com"
+            <a class="link link__contact-info" href="mailto:info@devstudio.com"
               ><svg class="icon icon__header" width="16" height="12">
                 <use href="images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a
-              class="link link__contact-info"
-              href="tel:48111111111"
+            <a class="link link__contact-info" href="tel:48111111111"
               ><svg class="icon icon__header" width="10" height="16">
                 <use href="images/icons.svg#icon-smartphone"></use></svg
               >+48 111 111 111</a
@@ -61,6 +59,11 @@
           </li>
         </ul>
       </div>
+      <button class="menu-toggle js-open-menu">
+        <svg width="24" height="24" viewBox="0 0 20 20">
+          <use href="images/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
     </header>
     <main>
       <!--HERO-->
@@ -148,7 +151,7 @@
       </section>
       <!--About Us-->
 
-      <section class="section about>
+      <section class="section about">
         <div class="container">
           <h2 class="section__heading">Czym się zajmujemy</h2>
         </div>
@@ -404,7 +407,9 @@
             >
             <ul class="footer__contact">
               <li>
-                <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
+                <address class="footer__address">
+                  m. Warszawa, Aleje Jerozolimskie 21
+                </address>
               </li>
               <li>
                 <a class="link link__footer" href="mailto:info@devstudio.com"
@@ -469,6 +474,55 @@
         </div>
       </footer>
     </main>
+    <div class="menu__container js-menu-container" id="mobile-menu">
+      <button type="button" class="menu__close-btn js-close-menu">
+        <svg class="icon" viewBox="0 0 20 20" width="19" height="19">
+          <use href="images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div>
+        <nav>
+          <ul class="menu__navigation">
+            <li>
+              <a class="link link__menu" href="index.html">Agencja</a>
+            </li>
+            <li>
+              <a class="link link__menu" href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="link link__menu" href="#">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div>
+        <ul class="menu__contact-info">
+          <li>
+            <a class="link link__menu-contact" href="mailto:info@devstudio.com">
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link link__menu-contact" href="tel:48111111111"
+              >+48 111 111 111</a
+            >
+          </li>
+        </ul>
+        <ul class="menu__socials"></ul>
+        <li class="menu__social">Instagram</li>
+        <li class="menu__social">Twitter</li>
+        <li class="menu__social">Facebook</li>
+        <li class="menu__social">LinkedIn</li>
+      </div>
+    </div>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
     <div class="backdrop is-hidden" data-modal>
       <div class="backdrop__modal">
         <form class="backdrop__form">
