--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous"
     />
+
     <link href="css/main.min.css" rel="stylesheet" />
   </head>
   <body>
@@ -24,6 +27,16 @@
           <a class="logo link__header" href="index.html"
             ><span class="logo__accent">Web</span>Studio</a
           >
+          <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            a
+            <svg width="24" height="24" viewBox="0 0 20 20">
+              <use href="images/icons.svg#icon-menu"></use>
+            </svg>
+          </button>
           <nav>
             <ul class="header__navigation">
               <li>
@@ -59,11 +72,6 @@
           </li>
         </ul>
       </div>
-      <button class="menu-toggle js-open-menu">
-        <svg width="24" height="24" viewBox="0 0 20 20">
-          <use href="images/icons.svg#icon-menu"></use>
-        </svg>
-      </button>
     </header>
     <main>
       <!--HERO-->
@@ -89,7 +97,7 @@
                     <use href="images/icons.svg#icon-antenna"></use>
                   </svg>
                 </div>
-                <figcaption>
+                <figcaption class="hero__figcaption">
                   <h3 class="hero__heading">Lorem, ipsum</h3>
                   <p class="paragraph paragraph__hero">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -105,7 +113,7 @@
                     <use href="images/icons.svg#icon-clock"></use>
                   </svg>
                 </div>
-                <figcaption>
+                <figcaption class="hero__figcaption">
                   <h3 class="hero__heading">Lorem, ipsum</h3>
                   <p class="paragraph paragraph__hero">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -121,7 +129,7 @@
                     <use href="images/icons.svg#icon-diagram"></use>
                   </svg>
                 </div>
-                <figcaption>
+                <figcaption class="hero__figcaption">
                   <h3 class="hero__heading">Lorem, ipsum</h3>
                   <p class="paragraph paragraph__hero">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -137,7 +145,7 @@
                     <use href="images/icons.svg#icon-astronaut"></use>
                   </svg>
                 </div>
-                <figcaption>
+                <figcaption class="hero__figcaption">
                   <h3 class="hero__heading">Lorem, ipsum</h3>
                   <p class="paragraph paragraph__hero">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -474,9 +482,9 @@
         </div>
       </footer>
     </main>
-    <div class="menu__container js-menu-container" id="mobile-menu">
+    <div class="menu js-menu-container" id="mobile-menu">
       <button type="button" class="menu__close-btn js-close-menu">
-        <svg class="icon" viewBox="0 0 20 20" width="19" height="19">
+        <svg class="icon menu__sign" viewBox="0 0 20 20" width="19" height="19">
           <use href="images/icons.svg#icon-close"></use>
         </svg>
       </button>
@@ -484,13 +492,17 @@
         <nav>
           <ul class="menu__navigation">
             <li>
-              <a class="link link__menu" href="index.html">Agencja</a>
+              <a class="link link__menu link__menu--nav" href="index.html"
+                >Agencja</a
+              >
             </li>
             <li>
-              <a class="link link__menu" href="portfolio.html">Portfolio</a>
+              <a class="link link__menu link__menu--nav" href="portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li>
-              <a class="link link__menu" href="#">Kontakt</a>
+              <a class="link link__menu link__menu--nav" href="#">Kontakt</a>
             </li>
           </ul>
         </nav>
@@ -498,21 +510,25 @@
       <div>
         <ul class="menu__contact-info">
           <li>
-            <a class="link link__menu-contact" href="mailto:info@devstudio.com">
-              >info@devstudio.com</a
+            <a
+              class="link link__menu link__menu--mail"
+              href="mailto:info@devstudio.com"
+            >
+              info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link link__menu-contact" href="tel:48111111111"
+            <a class="link link__menu link__menu--tel" href="tel:48111111111"
               >+48 111 111 111</a
             >
           </li>
         </ul>
-        <ul class="menu__socials"></ul>
-        <li class="menu__social">Instagram</li>
-        <li class="menu__social">Twitter</li>
-        <li class="menu__social">Facebook</li>
-        <li class="menu__social">LinkedIn</li>
+        <ul class="menu__socials">
+          <li class="menu__social">Instagram</li>
+          <li class="menu__social">Twitter</li>
+          <li class="menu__social">Facebook</li>
+          <li class="menu__social">LinkedIn</li>
+        </ul>
       </div>
     </div>
 
