--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                   src="images/team/teamcard_1_270.jpg"
                   alt="Zdjęcie pierwszego członka zespołu, mężczyzna z brodą"
                   srcset="
-                    ../images/team/teamcard_1_354.jpg 354w,
-                    ../images/team/teamcard_1_406.jpg 406w,
-                    ../images/team/teamcard_1_450.jpg 450w,
-                    ../images/team/teamcard_1_531.jpg 531w,
-                    ../images/team/teamcard_1_540.jpg 540w,
-                    ../images/team/teamcard_1_676.jpg 676w,
-                    ../images/team/teamcard_1_708.jpg 708w,
-                    ../images/team/teamcard_1_900.jpg 900w
+                    /images/team/teamcard_1_354.jpg 354w,
+                    /images/team/teamcard_1_406.jpg 406w,
+                    /images/team/teamcard_1_450.jpg 450w,
+                    /images/team/teamcard_1_531.jpg 531w,
+                    /images/team/teamcard_1_540.jpg 540w,
+                    /images/team/teamcard_1_676.jpg 676w,
+                    /images/team/teamcard_1_708.jpg 708w,
+                    /images/team/teamcard_1_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
@@ -257,11 +257,11 @@
                   src="images/team/teamcard_2_270.jpg"
                   alt="Zdjęcie drugiego członka zespołu Blondynka w okularach"
                   srcset="
-                    ../images/team/teamcard_2_354.jpg 354w,
-                    ../images/team/teamcard_2_450.jpg 450w,
-                    ../images/team/teamcard_2_540.jpg 540w,
-                    ../images/team/teamcard_2_708.jpg 708w,
-                    ../images/team/teamcard_2_900.jpg 900w
+                    /images/team/teamcard_2_354.jpg 354w,
+                    /images/team/teamcard_2_450.jpg 450w,
+                    /images/team/teamcard_2_540.jpg 540w,
+                    /images/team/teamcard_2_708.jpg 708w,
+                    /images/team/teamcard_2_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
@@ -300,11 +300,11 @@
                   src="images/team/teamcard_3.jpg"
                   alt="Zdjęcie trzeciego członka zespołu, mężczyzna w białej koszuli"
                   srcset="
-                    ../images/team/teamcard_3_354.jpg 354w,
-                    ../images/team/teamcard_3_450.jpg 450w,
-                    ../images/team/teamcard_3_556.jpg 540w,
-                    ../images/team/teamcard_3_708.jpg 708w,
-                    ../images/team/teamcard_3_900.jpg 900w
+                    /images/team/teamcard_3_354.jpg 354w,
+                    /images/team/teamcard_3_450.jpg 450w,
+                    /images/team/teamcard_3_556.jpg 540w,
+                    /images/team/teamcard_3_708.jpg 708w,
+                    /images/team/teamcard_3_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
@@ -343,11 +343,11 @@
                   src="images/team/teamcard_4.jpg"
                   alt="Zdjęcie czwartego członka zespołu, mężczyzna w czarnym podkoszulku z brodą i w okularach"
                   srcset="
-                    ../images/team/teamcard_4_354.jpg 354w,
-                    ../images/team/teamcard_4_450.jpg 450w,
-                    ../images/team/teamcard_4_540.jpg 540w,
-                    ../images/team/teamcard_4_708.jpg 708w,
-                    ../images/team/teamcard_4_900.jpg 900w
+                    /images/team/teamcard_4_354.jpg 354w,
+                    /images/team/teamcard_4_450.jpg 450w,
+                    /images/team/teamcard_4_540.jpg 540w,
+                    /images/team/teamcard_4_708.jpg 708w,
+                    /images/team/teamcard_4_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
