Trying to fix image issue

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <ul class="list__about">
             <li class="about__tile">
               <img
-                src="images/about_us/box1.jpg"
+                src="./images/about_us/box1.jpg"
                 alt="Programista pracuje nad kodem"
                 width="370"
                 height="294"
@@ -177,7 +177,7 @@
             </li>
             <li class="about__tile">
               <img
-                src="images/about_us/box2.jpg"
+                src="./images/about_us/box2.jpg"
                 alt="Web developer pracuje nad projektem"
                 width="370"
                 height="294"
@@ -188,7 +188,7 @@
             </li>
             <li class="about__tile">
               <img
-                src="images/about_us/box3.jpg"
+                src="./images/about_us/box3.jpg"
                 alt="Projektant strony dobiera kolory z palety"
                 width="370"
                 height="294"
@@ -208,17 +208,17 @@
               <figure class="team__figure">
                 <img
                   class="image"
-                  src="images/team/teamcard_1_270.jpg"
+                  src="./images/team/teamcard_1_270.jpg"
                   alt="Zdjęcie pierwszego członka zespołu, mężczyzna z brodą"
                   srcset="
-                    /images/team/teamcard_1_354.jpg 354w,
-                    /images/team/teamcard_1_406.jpg 406w,
-                    /images/team/teamcard_1_450.jpg 450w,
-                    /images/team/teamcard_1_531.jpg 531w,
-                    /images/team/teamcard_1_540.jpg 540w,
-                    /images/team/teamcard_1_676.jpg 676w,
-                    /images/team/teamcard_1_708.jpg 708w,
-                    /images/team/teamcard_1_900.jpg 900w
+                    ./images/team/teamcard_1_354.jpg 354w,
+                    ./images/team/teamcard_1_406.jpg 406w,
+                    ./images/team/teamcard_1_450.jpg 450w,
+                    ./images/team/teamcard_1_531.jpg 531w,
+                    ./images/team/teamcard_1_540.jpg 540w,
+                    ./images/team/teamcard_1_676.jpg 676w,
+                    ./images/team/teamcard_1_708.jpg 708w,
+                    ./images/team/teamcard_1_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
@@ -254,14 +254,14 @@
               <figure class="team__figure">
                 <img
                   class="image"
-                  src="images/team/teamcard_2_270.jpg"
+                  src="./images/team/teamcard_2_270.jpg"
                   alt="Zdjęcie drugiego członka zespołu Blondynka w okularach"
                   srcset="
-                    /images/team/teamcard_2_354.jpg 354w,
-                    /images/team/teamcard_2_450.jpg 450w,
-                    /images/team/teamcard_2_540.jpg 540w,
-                    /images/team/teamcard_2_708.jpg 708w,
-                    /images/team/teamcard_2_900.jpg 900w
+                    ./images/team/teamcard_2_354.jpg 354w,
+                    ./images/team/teamcard_2_450.jpg 450w,
+                    ./images/team/teamcard_2_540.jpg 540w,
+                    ./images/team/teamcard_2_708.jpg 708w,
+                    ./images/team/teamcard_2_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
@@ -297,14 +297,14 @@
               <figure class="team__figure">
                 <img
                   class="image"
-                  src="images/team/teamcard_3.jpg"
+                  src="./images/team/teamcard_3.jpg"
                   alt="Zdjęcie trzeciego członka zespołu, mężczyzna w białej koszuli"
                   srcset="
-                    /images/team/teamcard_3_354.jpg 354w,
-                    /images/team/teamcard_3_450.jpg 450w,
-                    /images/team/teamcard_3_556.jpg 540w,
-                    /images/team/teamcard_3_708.jpg 708w,
-                    /images/team/teamcard_3_900.jpg 900w
+                    ./images/team/teamcard_3_354.jpg 354w,
+                    ./images/team/teamcard_3_450.jpg 450w,
+                    ./images/team/teamcard_3_556.jpg 540w,
+                    ./images/team/teamcard_3_708.jpg 708w,
+                    ./images/team/teamcard_3_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
@@ -340,14 +340,14 @@
               <figure class="team__figure">
                 <img
                   class="image"
-                  src="images/team/teamcard_4.jpg"
+                  src="./images/team/teamcard_4.jpg"
                   alt="Zdjęcie czwartego członka zespołu, mężczyzna w czarnym podkoszulku z brodą i w okularach"
                   srcset="
-                    /images/team/teamcard_4_354.jpg 354w,
-                    /images/team/teamcard_4_450.jpg 450w,
-                    /images/team/teamcard_4_540.jpg 540w,
-                    /images/team/teamcard_4_708.jpg 708w,
-                    /images/team/teamcard_4_900.jpg 900w
+                    ./images/team/teamcard_4_354.jpg 354w,
+                    ./images/team/teamcard_4_450.jpg 450w,
+                    ./images/team/teamcard_4_540.jpg 540w,
+                    ./images/team/teamcard_4_708.jpg 708w,
+                    ./images/team/teamcard_4_900.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, calc(100vw - 30px)"
                 />
